test/fixtures/type-error/badReturnType.ro
type int = ???
type float = ???

export fun test(): float = 1